# avepoint-churn-exercise

./: .gitignore  CLAUDE.md  README.md  enhance_presentation.py  pyproject.toml  script.md
.github/workflows/: deploy.yml
config/: model_config.yaml
config/docs/: 00_EXERCISE_PLAN.md  01_BUSINESS_PROBLEM.md  02_FEATURE_ARCHITECTURE.md  03_PREDICTIVE_MODELING.md  04_STRATEGIC_RECOMMENDATIONS.md  05_MENTORSHIP.md  06_FABRIC_DEPLOYMENT.md  FABRIC_DEPLOYMENT.md  PLAN.md
docs/: 00_EXERCISE_PLAN.md  01_eda.html  02_FEATURE_ARCHITECTURE.md  02_modeling.html  03_monitoring.html  06_FABRIC_DEPLOYMENT.md  ENHANCEMENT_COMPLETE.md  FULL_SLIDE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STEPS.md  PRESENTATION_ENHANCEMENT_SUMMARY.md  PRESENTATION_INTEGRATION_PLAN.md  index.html  index.html.backup
files/: PLAN.md
files/churn_prediction/: README.md  pyproject.toml
memory-bank/: activeContext.md  progress.md  systemPatterns.md  techContext.md
memory-bank/core/: activeContext.md  productContext.md  progress.md  projectbrief.md  techContext.md
mlruns/1/ad830064b4674f23a273896a05ca966f/artifacts/: feature_importance.json  feature_importance_gain.json  feature_importance_split.json
mlruns/1/models/m-5c641c8f801b4207b3ac9b509d4e5ecf/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
notebooks/: 01_eda.py  02_modeling.py  03_monitoring.py
notebooks/__marimo__/: 01_eda.html  02_modeling.html
notebooks/__marimo__/session/: 01_eda.py.json  02_modeling.py.json  03_monitoring.py.json
outputs/: evaluation_report.json
outputs/models/: churn_model_v1.features.txt
src/data/: generate_synthetic.py  generate_synthetic_mnb.py  schema.py
src/data/__marimo__/session/: generate_synthetic_mnb.py.json
src/features/: engineering.py  leakage_audit.py
src/model/: evaluate.py  explain.py  train.py  xgb_model.pkl
src/utils/: build_lakehouse.py  duckdb_lakehouse.py  run_pipeline.py  temporal_split.py
tests/: test_data_validation.py  test_features_engineering.py  test_leakage_audit.py
